# minichacha

./: Cargo.toml  README.txt  flake.nix
src/: encryptor.rs  main.rs
