[package]
name = "minichacha"
version = "1.0.0"
edition = "2021"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
anyhow = "1.0.87"
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
pbkdf2 = "0.12.2"
pico-args = "0.5.0"
rpassword = "7.3"
sha2 = "0.10.8"
